Import of SKIM/Mock-Person-DE-0.02 from CPAN.
gitpan-cpan-distribution: Mock-Person-DE
gitpan-cpan-version:      0.02
gitpan-cpan-path:         SKIM/Mock-Person-DE-0.02.tar.gz
gitpan-cpan-author:       SKIM
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -28,10 +28,11 @@ no_index:
     - t
 requires:
   Exporter: 0
+  List::MoreUtils: 0
   Readonly: 0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Mock-Person-DE
   homepage: https://github.com/tupinek/Mock-Person-DE
   license: http://opensource.org/licenses/bsd-license.php
   repository: git://github.com/tupinek/Mock-Person-DE
-version: 0.01
+version: 0.02
